[gd_scene load_steps=5 format=2]

[ext_resource path="res://ShipBody/ShipBody.gd" type="Script" id=1]
[ext_resource path="res://assets/red_arrow_ship.svg" type="Texture" id=2]
[ext_resource path="res://assets/object_selection_2.svg" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Selection"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}

[node name="ShipBody" type="Area2D"]
z_index = 1
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 0.3, 0.5 )
texture = ExtResource( 2 )

[node name="Shape" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( 0.0657119, -12.2503, 7.53277, 12.4169, 0.197031, 6.54157, -7.77641, 12.5689 )

[node name="Selection" type="Sprite" parent="."]
visible = false
rotation = 6.28292
scale = Vector2( 1.08158, 1.08158 )
z_index = 1
texture = ExtResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="Selection"]
anims/Selection = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="input_event" from="." to="." method="_on_ShipBody_input_event"]
[connection signal="draw" from="Selection" to="." method="_on_Selection_draw"]
[connection signal="hide" from="Selection" to="." method="_on_Selection_hide"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
